--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://SaeedhShareef.github.io/homework728",
+  "homepage": "https://saeedhshareef.github.io/homework728/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
